@@ -190,6 +190,36 @@ name|REGEX
 operator|+
 literal|".slop"
 decl_stmt|;
+DECL|field|PATTERN
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|PATTERN
+init|=
+name|HIGHLIGHT
+operator|+
+literal|"."
+operator|+
+name|REGEX
+operator|+
+literal|".pattern"
+decl_stmt|;
+DECL|field|MAX_RE_CHARS
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|MAX_RE_CHARS
+init|=
+name|HIGHLIGHT
+operator|+
+literal|"."
+operator|+
+name|REGEX
+operator|+
+literal|".maxAnalyzedChars"
+decl_stmt|;
 block|}
 end_interface
 
