@@ -2089,6 +2089,36 @@ operator|.
 name|iterator
 argument_list|()
 decl_stmt|;
+name|int
+index|[]
+name|idlist
+init|=
+operator|new
+name|int
+index|[
+name|ids
+operator|.
+name|size
+argument_list|()
+index|]
+decl_stmt|;
+name|Map
+argument_list|<
+name|Integer
+argument_list|,
+name|Integer
+argument_list|>
+name|pos
+init|=
+operator|new
+name|HashMap
+argument_list|<
+name|Integer
+argument_list|,
+name|Integer
+argument_list|>
+argument_list|()
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -2106,17 +2136,57 @@ name|i
 operator|++
 control|)
 block|{
-name|docs
+name|idlist
 index|[
 name|i
 index|]
 operator|=
-name|doc
-argument_list|(
 name|iter
 operator|.
 name|nextDoc
 argument_list|()
+expr_stmt|;
+name|pos
+operator|.
+name|put
+argument_list|(
+name|idlist
+index|[
+name|i
+index|]
+argument_list|,
+name|i
+argument_list|)
+expr_stmt|;
+block|}
+name|Arrays
+operator|.
+name|sort
+argument_list|(
+name|idlist
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|docid
+range|:
+name|idlist
+control|)
+block|{
+name|docs
+index|[
+name|pos
+operator|.
+name|get
+argument_list|(
+name|docid
+argument_list|)
+index|]
+operator|=
+name|doc
+argument_list|(
+name|docid
 argument_list|,
 name|fields
 argument_list|)
