@@ -1540,6 +1540,217 @@ literal|"//lst[@name='1'][not(*)]"
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testRegexFragmenter
+specifier|public
+name|void
+name|testRegexFragmenter
+parameter_list|()
+block|{
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|args
+init|=
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"fl"
+argument_list|,
+literal|"id score"
+argument_list|)
+expr_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"hl"
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"hl.snippets"
+argument_list|,
+literal|"10"
+argument_list|)
+expr_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"hl.fl"
+argument_list|,
+literal|"t_text"
+argument_list|)
+expr_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"hl.fragmenter"
+argument_list|,
+literal|"regex"
+argument_list|)
+expr_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"hl.regex.pattern"
+argument_list|,
+literal|"[-\\w ,\"']{20,200}"
+argument_list|)
+expr_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"hl.regex.slop"
+argument_list|,
+literal|".9"
+argument_list|)
+expr_stmt|;
+name|TestHarness
+operator|.
+name|LocalRequestFactory
+name|sumLRF
+init|=
+name|h
+operator|.
+name|getRequestFactory
+argument_list|(
+literal|"standard"
+argument_list|,
+literal|0
+argument_list|,
+literal|200
+argument_list|,
+name|args
+argument_list|)
+decl_stmt|;
+name|String
+name|t
+init|=
+literal|"This is an example of a sentence. Another example \"sentence\" with "
+operator|+
+literal|"special characters\nand a line-break! Miscellaneous character like ^ are "
+operator|+
+literal|"unknowns and end up being bad example s of sentences? I wonder how "
+operator|+
+literal|"slashes/other punctuation fare in these examples?"
+decl_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"t_text"
+argument_list|,
+name|t
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"1"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|optimize
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+literal|"regex fragmenter"
+argument_list|,
+name|sumLRF
+operator|.
+name|makeRequest
+argument_list|(
+literal|"t_text:example"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='highlighting']/lst[@name='1']"
+argument_list|,
+literal|"//arr/str[.='This is an<em>example</em> of a sentence']"
+argument_list|,
+literal|"//arr/str[.='. Another<em>example</em> \"sentence\" with special characters\nand a line-break']"
+argument_list|,
+literal|"//arr/str[.=' ^ are unknowns and end up being bad<em>example</em> s of sentences']"
+argument_list|,
+literal|"//arr/str[.='/other punctuation fare in these<em>examples</em>?']"
+argument_list|)
+expr_stmt|;
+comment|// try with some punctuation included
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"hl.regex.pattern"
+argument_list|,
+literal|"[-\\w ,^/\\n\"']{20,200}"
+argument_list|)
+expr_stmt|;
+name|sumLRF
+operator|=
+name|h
+operator|.
+name|getRequestFactory
+argument_list|(
+literal|"standard"
+argument_list|,
+literal|0
+argument_list|,
+literal|200
+argument_list|,
+name|args
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+literal|"regex fragmenter 2"
+argument_list|,
+name|sumLRF
+operator|.
+name|makeRequest
+argument_list|(
+literal|"t_text:example"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='highlighting']/lst[@name='1']"
+argument_list|,
+literal|"//arr/str[.='This is an<em>example</em> of a sentence']"
+argument_list|,
+literal|"//arr/str[.='. Another<em>example</em> \"sentence\" with special characters\nand a line-break']"
+argument_list|,
+literal|"//arr/str[.='! Miscellaneous character like ^ are unknowns and end up being bad<em>example</em> s of sentences']"
+argument_list|,
+literal|"//arr/str[.='? I wonder how slashes/other punctuation fare in these<em>examples</em>?']"
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testVariableFragsize
 specifier|public
 name|void
